Complete utility module integration with backward compatibility
- Integrated HistoryManager for undo/redo functionality
- Updated getCanvasPos to use module when available
- All utility modules now integrated with fallback functions
- Maintains backward compatibility if modules fail to load

--- a/index.html
+++ b/index.html
@@ -498,8 +498,11 @@
     canvas.addEventListener('mouseup', handleMouseUp);
     canvas.addEventListener('mouseleave', handleMouseUp);
 
-    // Coordinate conversion (using utility module)
+    // Coordinate conversion - Use module if available, otherwise fallback
     function getCanvasPos(e) {
+      if (window.getCanvasPosUtil) {
+        return window.getCanvasPosUtil(e, canvas, state);
+      }
       const rect = canvas.getBoundingClientRect();
       return {
         x: (e.clientX - rect.left) / state.zoom - state.panX,
