--- a/index.html
+++ b/index.html
@@ -3628,6 +3628,8 @@
     import { showLoading as showLoadingModule, showProgress as showProgressModule, initLoadingStyles } from './js/core/loading-state.js';
     import { showUndoRedoFeedback as showUndoRedoFeedbackModule, initUndoRedoStyles } from './js/features/undo-redo-feedback.js';
     import { snapToGrid as snapToGridModule, snapPointToGrid as snapPointToGridModule, snapShapeToGrid as snapShapeToGridModule } from './js/core/snap-to-grid.js';
+    import { exportToSVG as exportToSVGModule, downloadSVG as downloadSVGModule } from './js/utils/svg-export.js';
+    import { showExportOptionsDialog as showExportOptionsDialogModule } from './js/features/export-options.js';
     
     // Make utilities available globally for backward compatibility
     window.rgbToHex = rgbToHex;
